# pyRSS

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
scripts/: bashrc.sh  install.gil
src/: bashrc.sh  pyrss.py  pytitles.py  rsscli.py
src/pyrss/: __init__.py  cli.py  store.py
tests/: test_pyrss.py
