[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrss"
version = "0.1.0"
description = "SQLite-backed RSS reader (CLI + Python API)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "pyRSS contributors" }
]
dependencies = [
  "feedparser>=6.0",
]

[project.urls]
Homepage = "https://example.com/pyrss"

[project.scripts]
pyrss = "pyrss.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
